--- a/exercicos/ex022/fundo006.html
+++ b/exercicos/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -27,6 +27,10 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptatem accusamus at asperiores quas. Voluptates at, tempore facilis beatae perspiciatis soluta? Quibusdam nihil consequuntur animi voluptatibus beatae quo! Nesciunt, quia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat praesentium, reprehenderit nulla obcaecati mollitia maiores magni dicta qui minima id et incidunt officia ipsa nihil sint iste totam nemo voluptate! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic distinctio porro eius impedit voluptate ex qui, eveniet deleniti asperiores voluptatem explicabo pariatur, dolores accusantium. Tempora facere voluptatum cumque repudiandae quod!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptatem accusamus at asperiores quas. Voluptates at, tempore facilis beatae perspiciatis soluta? Quibusdam nihil consequuntur animi voluptatibus beatae quo! Nesciunt, quia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat praesentium, reprehenderit nulla obcaecati mollitia maiores magni dicta qui minima id et incidunt officia ipsa nihil sint iste totam nemo voluptate! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic distinctio porro eius impedit voluptate ex qui, eveniet deleniti asperiores voluptatem explicabo pariatur, dolores accusantium. Tempora facere voluptatum cumque repudiandae quod!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptatem accusamus at asperiores quas. Voluptates at, tempore facilis beatae perspiciatis soluta? Quibusdam nihil consequuntur animi voluptatibus beatae quo! Nesciunt, quia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat praesentium, reprehenderit nulla obcaecati mollitia maiores magni dicta qui minima id et incidunt officia ipsa nihil sint iste totam nemo voluptate! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic distinctio porro eius impedit voluptate ex qui, eveniet deleniti asperiores voluptatem explicabo pariatur, dolores accusantium. Tempora facere voluptatum cumque repudiandae quod!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptatem accusamus at asperiores quas. Voluptates at, tempore facilis beatae perspiciatis soluta? Quibusdam nihil consequuntur animi voluptatibus beatae quo! Nesciunt, quia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat praesentium, reprehenderit nulla obcaecati mollitia maiores magni dicta qui minima id et incidunt officia ipsa nihil sint iste totam nemo voluptate! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic distinctio porro eius impedit voluptate ex qui, eveniet deleniti asperiores voluptatem explicabo pariatur, dolores accusantium. Tempora facere voluptatum cumque repudiandae quod!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptatem accusamus at asperiores quas. Voluptates at, tempore facilis beatae perspiciatis soluta? Quibusdam nihil consequuntur animi voluptatibus beatae quo! Nesciunt, quia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat praesentium, reprehenderit nulla obcaecati mollitia maiores magni dicta qui minima id et incidunt officia ipsa nihil sint iste totam nemo voluptate! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic distinctio porro eius impedit voluptate ex qui, eveniet deleniti asperiores voluptatem explicabo pariatur, dolores accusantium. Tempora facere voluptatum cumque repudiandae quod!</p>
     </main>
 </body>
