--- a/exercicos/ex023/tabela002.html
+++ b/exercicos/ex023/tabela002.html
@@ -11,6 +11,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
@@ -23,8 +24,14 @@
             background-color: lightgray;
         }
         thead, tfoot {
-            background-color: grey;
+            background-color: #383838;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
         }
 
         tbody > tr:nth-child(2n) {
@@ -73,6 +80,114 @@
                 <td>Rio de Janeiro</td>
                 <td class="num">17 223 547</td>
             </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
+            <tr>
+                <td>São paulo</td>
+                <td class="num">46 081 801</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 393 441</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 223 547</td>
+            </tr>
             
         </tbody>
         <tfoot>
@@ -82,5 +197,10 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, magni mollitia? Doloribus explicabo laboriosam impedit, earum corporis molestiae quod, dolor eos similique, velit consequuntur repellendus reiciendis aperiam mollitia officia non! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo rem magnam alias repellendus omnis molestiae perspiciatis obcaecati at quidem in explicabo sequi error velit aperiam unde blanditiis, tempore quis eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eius debitis suscipit recusandae quam quisquam, nihil repudiandae modi obcaecati et corrupti neque animi perferendis iure rem. Ullam voluptatum quam aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est id ad iusto suscipit? Blanditiis sint consequuntur sunt modi et quasi, optio a maiores facere impedit veritatis necessitatibus dolores. Repellat.</p>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, magni mollitia? Doloribus explicabo laboriosam impedit, earum corporis molestiae quod, dolor eos similique, velit consequuntur repellendus reiciendis aperiam mollitia officia non! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo rem magnam alias repellendus omnis molestiae perspiciatis obcaecati at quidem in explicabo sequi error velit aperiam unde blanditiis, tempore quis eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eius debitis suscipit recusandae quam quisquam, nihil repudiandae modi obcaecati et corrupti neque animi perferendis iure rem. Ullam voluptatum quam aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est id ad iusto suscipit? Blanditiis sint consequuntur sunt modi et quasi, optio a maiores facere impedit veritatis necessitatibus dolores. Repellat.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, magni mollitia? Doloribus explicabo laboriosam impedit, earum corporis molestiae quod, dolor eos similique, velit consequuntur repellendus reiciendis aperiam mollitia officia non! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo rem magnam alias repellendus omnis molestiae perspiciatis obcaecati at quidem in explicabo sequi error velit aperiam unde blanditiis, tempore quis eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eius debitis suscipit recusandae quam quisquam, nihil repudiandae modi obcaecati et corrupti neque animi perferendis iure rem. Ullam voluptatum quam aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est id ad iusto suscipit? Blanditiis sint consequuntur sunt modi et quasi, optio a maiores facere impedit veritatis necessitatibus dolores. Repellat.</p>
+       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, magni mollitia? Doloribus explicabo laboriosam impedit, earum corporis molestiae quod, dolor eos similique, velit consequuntur repellendus reiciendis aperiam mollitia officia non! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo rem magnam alias repellendus omnis molestiae perspiciatis obcaecati at quidem in explicabo sequi error velit aperiam unde blanditiis, tempore quis eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eius debitis suscipit recusandae quam quisquam, nihil repudiandae modi obcaecati et corrupti neque animi perferendis iure rem. Ullam voluptatum quam aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est id ad iusto suscipit? Blanditiis sint consequuntur sunt modi et quasi, optio a maiores facere impedit veritatis necessitatibus dolores. Repellat.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, magni mollitia? Doloribus explicabo laboriosam impedit, earum corporis molestiae quod, dolor eos similique, velit consequuntur repellendus reiciendis aperiam mollitia officia non! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo rem magnam alias repellendus omnis molestiae perspiciatis obcaecati at quidem in explicabo sequi error velit aperiam unde blanditiis, tempore quis eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eius debitis suscipit recusandae quam quisquam, nihil repudiandae modi obcaecati et corrupti neque animi perferendis iure rem. Ullam voluptatum quam aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est id ad iusto suscipit? Blanditiis sint consequuntur sunt modi et quasi, optio a maiores facere impedit veritatis necessitatibus dolores. Repellat.</p>
 </body>
 </html>
