--- a/exercicos/ex024/iframe001.html
+++ b/exercicos/ex024/iframe001.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>estudos de iframe </title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>testando o uso de um iframe </h1>
     <p>acessando site do 
-        
-            <iframe src="https://www.cursoemvideo.com" frameborder="0">
-
+            <!--Tamanho padrao 300x150 -->
+            <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500" scolling="no">
+                <a href="https://www.cursoemvideo.com" target="_blank">Curso em video</a>
             </iframe>
 
         para aprender a programar.</p>
-        <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> tambem e muito legal</p>
+        <p>O repositorio do guanabara 
+            <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500" width="500">
+               no <a href="https://gustavoguanabara.github.io" target="_blank">github</a>
+            </iframe>
+           
+            tambem e muito legal</p>
 </body>
 </html>
