--- a/exercicos/ex024/iframe002.html
+++ b/exercicos/ex024/iframe002.html
@@ -18,7 +18,9 @@
 <body>
     <h1>teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, quam. Accusamus ratione recusandae, ipsa enim porro omnis possimus unde necessitatibus incidunt! Repellendus laudantium nobis quisquam corrupti maxime ut, ipsam adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatum necessitatibus, doloribus cumque explicabo perspiciatis eveniet ullam voluptatibus! Distinctio dolores quaerat nemo iusto ea voluptas ipsam exercitationem ratione! Expedita, dolorem?</p>
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>infelizmente seu navegador não é compativel!</p>
+    </iframe>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sapiente corporis veritatis quidem assumenda dolores quasi libero dignissimos quis voluptate, rerum optio similique explicabo expedita, dolorum voluptas eaque aliquam fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti omnis ad illo eius natus aliquam aut quae quos, iusto ex? Quas quis voluptates fuga voluptate expedita quae iste totam rem.</p>
 </body>
 </html>
