--- a/exercicos/ex024/iframe003.html
+++ b/exercicos/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam rerum soluta veniam, laudantium vitae debitis mollitia, blanditiis nemo aut accusantium odit tenetur, architecto necessitatibus. Assumenda perspiciatis mollitia vel cumque tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui hic? Adipisci necessitatibus veniam quidem, obcaecati blanditiis cum molestias, ut, dolor quae inventore laboriosam itaque maxime est sunt expedita sequi?</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="<h1> escolha uma das opções acima ">
         <p>ifelizmente seu navegador não é compativel</p>
     </iframe>
 
