--- a/exercicos/ex025/form001.html
+++ b/exercicos/ex025/form001.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <h1>Meu primeiro formulario</h1>
-    <form>
-        <p>Nome: <input type="text" name="Nome" id="Nome"></p>
-        <p>Sobrenome: <input type="text" name="Sobrenome" id="Sobrenome"></p>
+    <form action="cadastro.php" method="post" autocomplete="off">
+        <p><label for="iNome">Nome:</label>
+             <input type="text" name="Nome" id="iNome"></p>
+        <p><label for="iSobrenome">Sobrenome:</label>
+             <input type="text" name="Sobrenome" id="iSobrenome"></p>
         <p><input type="submit" value="enviar"></p>
     </form>
 </body>
