--- a/exercicos/ex025/form003.html
+++ b/exercicos/ex025/form003.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>teste de formulario</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="inome">Nome:</label>
             <input type="text" name="nome" id="inome" required maxlength="30" placeholder="nome completo" autocomplete="name">
