--- a/exercicos/ex026/mq005/index.html
+++ b/exercicos/ex026/mq005/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>media query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+        menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">opção 1</a></li>
                 <li><a href="#">opção 2</a></li>
@@ -29,5 +32,14 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum distinctio ipsum, cumque tenetur cupiditate repellat eligendi cum adipisci, aliquid expedita, optio est quia sint quod dolor perspiciatis similique soluta? Ad? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta voluptas quas reiciendis ullam aliquid nulla dolorem quidem repellat inventore fugiat! Sed obcaecati ad ducimus debitis enim nam illo animi quos!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
