--- a/exercicos/ex027/flex006/index.html
+++ b/exercicos/ex027/flex006/index.html
@@ -11,7 +11,7 @@
 
             display: flex;
             flex-flow: row wrap;
-            align-content: ;
+            align-content: space-evenly;
         }
 
         div.item {
