--- a/exercicos/ex027/flex013-menu flexbox/index.html
+++ b/exercicos/ex027/flex013-menu flexbox/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>menu flexbox</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Meu site</h1>
+        <nav>
+            <a href="#">Opção 1</a>
+            <a href="#">opção 2</a>
+            <a href="#">Opção 3</a>
+            <a href="#">Opção 4</a>
+            <a href="#">Opção 5</a>
+            <a href="#">Opção 6</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Teste de Flexbox</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, non dolorum aliquid dignissimos ad, dolore tenetur consequuntur quod nemo modi ut earum nihil vel praesentium repellendus, temporibus et veniam eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis dolore laboriosam nihil deleniti perspiciatis quisquam saepe animi, voluptate numquam doloremque quaerat architecto optio dolorum necessitatibus nemo, ut aspernatur, fugit explicabo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eligendi corrupti nesciunt perferendis sed esse necessitatibus ipsam libero ipsum error. Recusandae consequatur sit vel eius nobis commodi veritatis sequi expedita.</p>
+    </main>
 </body>
 </html>
